--- a/wtf-ml.qmd
+++ b/wtf-ml.qmd
@@ -169,7 +169,7 @@ To illustrate this more clearly, let's examine the relationship among wavenumber
 #| label: fig-lagged-spectra
 #| echo: false
 #| cache: true
-#| out-width: "60%"
+#| out-width: "80%"
 #| fig-align: center
 #| fig-cap: "The correlation between the original intensities and lagged intensities for the first sample.  As wavenumbers depart, the correlation of the intensities decreases."
 
@@ -183,7 +183,7 @@ for_cor_fig <-
   acf_calcs()
   
 ggplot(for_cor_fig, aes(x = lag, y = correlation)) +
-  geom_line(alpha = 0.5, linewidth = 0.5) +
+  geom_line(alpha = 0.5, linewidth = 1) +
   ylab("Correlation") +
   xlab("Lag") +
   ylim(0, 1)
@@ -684,7 +684,16 @@ pls_plot + rf_plot +
 
 @fig-pls-rf-tune-profiles (right) displays the tuning parameter profile for the RF model. Since the different pre-processing methods can produce different numbers of predictors, $m_{try}$ is represented here as a proportion of the number of possible predictors. The value of $m_{try}$ is fairly irrelevant so long as at least 10% of the predictors are randomly sampled at each split. The numerically best random forest model used `r format(best_rf$mtry[1], big.mark = ",")` predictors with pre-processing strategy `r best_rf$Pre[1]`, although there is obviously a range of values with the same performance (as well as another pre-processor). The optimal RF model (with RMSE `r format(min(best_rf$mean), digits = 3)`) performs poorly compared to the optimal PLS model (RMSE = `r format(min(best_pls$mean), digits = 3)`).  
 
-The Cubist performance profiles are shown in @fig-cb-profiles. The left panel shows that, after a few initial iterations, choice of the ensemble size is not crucial On the right, the main trend in the number of nearest neighbors is that 1-2 neighbors is a poor choice; otherwise there is very little difference in the RMSE profiles. Across pre-processing configurations,  the `r cb_rmse$Pre[which.min(cb_rmse$RMSE)]` appears to work best with this model with an estimated RMSE of `r signif(min(cb_rmse$RMSE), 3)`. Like the random forest results, pre-processing has a larger impact than the model's tuning parameter(s). TODO list best parameter values
+
+```{r}
+#| label: sb-tune
+#| include: false
+cb_pre_best <- cb_rmse$Pre[which.min(cb_rmse$RMSE)]
+cb_param_best <- all_cb_final %>% filter(Pre == cb_pre_best)
+```
+
+
+The Cubist performance profiles are shown in @fig-cb-profiles. The left panel shows that, after a few initial iterations, choice of the ensemble size is not crucial On the right, the main trend in the number of nearest neighbors is that 1-2 neighbors is a poor choice; otherwise there is very little difference in the RMSE profiles. Across pre-processing configurations,  the `r cb_rmse$Pre[which.min(cb_rmse$RMSE)]` SG configuration, along with `r cb_param_best$committees` committees and `r cb_param_best$neighbors` neighbors, appears to work best with this model with an estimated RMSE of `r signif(min(cb_rmse$RMSE), 3)`. Like the random forest results, pre-processing has a larger impact than the model's tuning parameter(s). 
 
 ```{r}
 #| label: fig-cb-profiles
@@ -722,9 +731,14 @@ cb_es + cb_nn +
 
 Recall that SVM models the parameter space; there are sometimes isolated regions of good performance. An initial grid of `r sum(svm_rmse$num_iter == 0) / 5` tuning parameter candidates were selected before proceeding to the iterative calculations. Across all pre-processing methods, the best RMSE from the initial phase was `r signif(min(svm_rmse$RMSE[svm_rmse$num_iter == 0]), 3)`, a substandard result. 
 
-TODO re-run computations with SVM tuning parameter values. 
+```{r}
+#| label: svm-tune
+#| include: false
+svm_pre_best <- svm_change$Pre[which.min(svm_change$best)]
+svm_param_best <- all_svm_final %>% filter(Pre == svm_pre_best)
+```
 
-@fig-svm-search illustrates the process of the iterative Bayesian search. A few of the profiles show a progressive reduction in the RMSE as the algorithm moves through the parameter space defined by the SVM cost and RBF dispersion parameters. Other profiles show some sporadic increases/jumps in RMSE. Bayesian optimization is a global, derivative free technique and may make discordant jumps as it explores the parameter space. In the end, the average reduction in RMSE across the pre-processing settings was `r signif(mean(svm_change$reduction), 2)`-fold, indicating that the optimization was effective. There are a few pre-processing methods with effectively equal results. The numerically best corresponding to SG settings of `r svm_change$Pre[which.min(svm_change$best)]`, a cost value of TODO, and a radial basis function dispersion parameter of TODO. The corresponding RMSE was estimated to be `r signif(min(svm_change$best), 3)`.
+@fig-svm-search illustrates the process of the iterative Bayesian search. A few of the profiles show a progressive reduction in the RMSE as the algorithm moves through the parameter space defined by the SVM cost and RBF dispersion parameters. Other profiles show some sporadic increases/jumps in RMSE. Bayesian optimization is a global, derivative free technique and may make discordant jumps as it explores the parameter space. In the end, the average reduction in RMSE across the pre-processing settings was `r signif(mean(svm_change$reduction), 2)`-fold, indicating that the optimization was effective. There are a few pre-processing methods with effectively equal results. The numerically best corresponding to SG settings of `r svm_change$Pre[which.min(svm_change$best)]`, a cost value of `r signif(min(svm_param_best$cost), 3)`, and a radial basis function dispersion parameter of `r format(min(svm_param_best$rbf_sigma), digits = 3, scientific = FALSE)` The corresponding RMSE was estimated to be `r signif(min(svm_change$best), 2)`.
 
 ```{r}
 #| label: fig-svm-search
