--- a/index.qmd
+++ b/index.qmd
@@ -189,7 +189,7 @@ ggplot(for_cor_fig, aes(x = lag, y = correlation)) +
 ```
 
 
-With such a large dimensional data set, it is difficult to investigate specific predictors visually. Additionally, the high degree of between-predictor correlations further increases the ability to investigate the data. In the pre-processing section, we'll look at specific data points using dimension reduction tools under different types of signal processing regimes. 
+With such a large dimensional data set, it is difficult to investigate specific predictors visually. Additionally, the high degree of between-predictor correlations further decreases the ability to investigate the data. In the pre-processing section, we'll look at specific data points using dimension reduction tools under different types of signal processing regimes. 
 
 In addition to understanding the predictors, we should also understand the characteristics of the response.  Examining the response distribution can help determine if a transformation may be necessary or detect unusual outcome values. @fig-concentration presents the histogram of drug product concentration across the samples.  For this data, the distribution is approximately symmetric and has a range of `r min(data_wide$concentration)` to `r max(data_wide$concentration)`.  Based on this figure, a transformation does not appear necessary, and there are no unusual samples.
 
